@@ -1,3 +1,10 @@
+2006-04-28  Boby Wang <boby.wang@sun.com>
+
+	Fix for # 333725
+
+	* ea-factory.h: Disable accessible code when accessibility is not enabled
+	* gal-a11y-factory.h: Remove some unused code
+
 2006-04-24  Rajeev ramanathan <rajeevramanathan_2004@yahoo.co.in>
 
 	reviewed by: Harish Krishnaswamy <kharish@novell.com> 
